--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ useBedrockForOnlineStatus: false
 
 
 # Discord information
-discordInvite: https://dsc.gg/chillclubop
+discordInvite: https://discord.gg/gcqgFCvVWE
 discordServerID: 939017734300266547
 discordChannelID: 1046353483131011122
 
